--- a/about.html
+++ b/about.html
@@ -75,29 +75,7 @@
 				
 				<div id="fh5co-main">
 				<div class="fh5co-narrow-content">
-					<h2 class="fh5co-heading animate-box" data-animate-effect="fadeInLeft">广告海报（鼠标悬停可看大图）</h2>
-					<div class="row row-bottom-padded-md">
-						<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
-							<div class="blog-entry">
-								<a href="#" class="blog-img"><img src="images/AD/E-a412018659540_01.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
-								<div class="desc">
-									<h3><a href="#">腾讯新闻-真实与全面</a></h3>
-									<span><small>by Liu </small> / <small> AD Design </small></span>
-									<p>展现腾讯新闻公正无私与客观可信的两大特点。</p>
-								</div>
-							</div>
-						</div>
-						<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
-							<div class="blog-entry">
-								<a href="#" class="blog-img"><img src="images/AD/E-a412018659540_02.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
-								<div class="desc">
-									<h3><a href="#">腾讯新闻-真实与全面</a></h3>
-									<span><small>by Liu </small> / <small> AD Design </small></span>
-									<p>展现腾讯新闻公正无私与客观可信的两大特点。</p>
-							</div>
-						</div>
-					</div>
-
+					
 			<div class="fh5co-narrow-content">
 					<h2 class="fh5co-heading animate-box" data-animate-effect="fadeInLeft">广告文案（获奖作品）</h2>
 					<div class="row">
@@ -189,7 +167,69 @@
 						</div>
 					</div>
 				</div>
-		
+		<h2 class="fh5co-heading animate-box" data-animate-effect="fadeInLeft">广告海报（鼠标悬停可看大图）</h2>
+					<div class="row row-bottom-padded-md">
+						<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
+							<div class="blog-entry">
+								<a href="#" class="blog-img"><img src="images/AD/E-a412018659540_01.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
+								<div class="desc">
+									<h3><a href="#">腾讯新闻-真实与全面</a></h3>
+									<span><small>by Liu </small> / <small> AD Design </small></span>
+									<p>展现腾讯新闻公正无私与客观可信的两大特点。</p>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
+							<div class="blog-entry">
+								<a href="#" class="blog-img"><img src="images/AD/E-a412018659540_02.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
+								<div class="desc">
+									<h3><a href="#">腾讯新闻-真实与全面</a></h3>
+									<span><small>by Liu </small> / <small> AD Design </small></span>
+									<p>展现腾讯新闻公正无私与客观可信的两大特点。</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
+							<div class="blog-entry">
+								<a href="#" class="blog-img"><img src="images/AD/timg.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
+								<div class="desc">
+									<h3><a href="#">动物保护公益海报</a></h3>
+									<span><small>by Liu </small> / <small> AD Design </small></span>
+									<p>用具有视觉冲击力的设计呼吁人们保护动物，拒绝动物表演</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
+							<div class="blog-entry">
+								<a href="#" class="blog-img"><img src="images/AD/news.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
+								<div class="desc">
+									<h3><a href="#">潮汕美食报纸设计</a></h3>
+									<span><small>by Liu </small> / <small> AD Design </small></span>
+									<p>展现宣扬有深厚文化底蕴的潮汕美食文化</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
+							<div class="blog-entry">
+								<a href="#" class="blog-img"><img src="images/AD/zhou.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
+								<div class="desc">
+									<h3><a href="#">我校周易研究社宣传海报</a></h3>
+									<span><small>by Liu </small> / <small> AD Design </small></span>
+									<p>用富含古典元素的素材进行设计</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
+							<div class="blog-entry">
+								<a href="#" class="blog-img"><img src="images/AD/02.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
+								<div class="desc">
+									<h3><a href="#">花嫁</a></h3>
+									<span><small>by Liu </small> / <small> AD Design </small></span>
+									<p>用多重元素表现如花瓣般的嫁衣</p>
+							</div>
+						</div>
+					</div>
+
 			
 		</div>
 	</div>
